KUBERNETES/applications/online-boutique-microservice-application/gateway-api/traefik/04-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp-route
  namespace: default
spec:
  parentRefs:
  - name: myapp-gateway-api
    sectionName: http
    kind: Gateway
  - name: myapp-gateway-api
    sectionName: https
    kind: Gateway
  hostnames:
  - myonlineboutique.mahinraza.online
  rules:
  - backendRefs:
    - name: frontend
      port: 80
      weight: 1
